--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-replace": "^5.0.5",
+    "babel-plugin-react-compiler": "^0.0.0-experimental-592953e-20240517",
     "react": "^19.0.0-beta-26f2496093-20240514",
     "react-dom": "^19.0.0-beta-26f2496093-20240514",
     "rollup-plugin-livereload": "^2.0.5",
     "rollup-plugin-serve": "^1.1.1"
   },
   "devDependencies": {
+    "@types/react": "^18.3.2",
     "rollup": "^4.17.2"
   },
   "scripts": {
