--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
     "@types/react": "^18.3.2",
     "rollup": "^4.17.2"
   },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.6.1",
+    "@rollup/rollup-linux-x64-musl": "4.18.0"
+  },
   "scripts": {
-    "build": "rollup --config -w"
+    "start": "rollup --config -w",
+    "build": "rollup -c --environment INCLUDE_DEPS,BUILD:production"
   }
 }
